# Baton

./: .baton.toml  .gitignore  AGENTS.md  BATON.md  BATON_PLAN.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: baton.mdc
.github/: copilot-instructions.md
baton/: __init__.py  cli.py
baton/adapters/: base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  registry.py
baton/commands/: check.py  doctor.py  end.py  health.py  history.py  hooks.py  init.py  install_skill.py  review.py  scan.py  scope.py  score.py  status.py  supersede.py  sync.py  trim.py
baton/core/: alerts.py  astscan.py  checkfmt.py  config.py  document.py  drift.py  findings.py  gitdiff.py  gitignore.py  healthfmt.py  heuristic.py  manifest.py  markers.py  pr_template.py  scan_comments.py  scan_docs.py  scan_manifest.py  scan_pr.py  schema.py  (+8 more)
tests/: test_adapters.py  test_alerts.py  test_astscan.py  test_check.py  test_checkfmt.py  test_cli.py  test_config.py  test_document.py  test_drift.py  test_end.py  test_extended.py  test_findings.py  test_gitdiff.py  test_gitignore.py  test_health.py  test_heuristic.py  test_history.py  test_hooks.py  test_install_skill.py  test_llm.py  test_manifest.py  test_markers.py  test_pending_review.py  test_pr_template.py  test_resolve_since.py  test_review.py  test_scan.py  test_scan_comments.py  test_scan_docs.py  test_scan_manifest.py  test_scan_pr.py  test_schema.py  test_scope_command.py  test_scope_io.py  test_scope_keywords.py  test_scope_match.py  test_scope_render.py  test_score.py  test_staleness.py  test_status.py  (+6 more)
(+6 files in other folders)
