[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton-pass"
version = "0.1.2"
description = "One living onboarding doc. Every agent. Every teammate. Always in sync."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "llm", "claude", "cursor", "codex", "developer-tools", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "ruamel.yaml>=0.18",
    "tomli>=2.0; python_version < '3.11'",
    "anthropic>=0.40",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
vertex = ["google-cloud-aiplatform>=1.38"]
all = ["openai>=1.0", "google-cloud-aiplatform>=1.38"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
baton = "baton.cli:main"

[project.urls]
Homepage = "https://github.com/AriS10223/baton"
Repository = "https://github.com/AriS10223/baton"
Issues = "https://github.com/AriS10223/baton/issues"

[tool.hatch.build.targets.wheel]
packages = ["baton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
